--- a/app/online.html
+++ b/app/online.html
@@ -871,7 +871,7 @@
         <section class="cinema-seo-txt">
           <div class="online-cinema-wrapper">
             <div class="cinema-seo-txt__block">
-              <div class="text">
+              <div class="cinema-text">
                 <h1 class="title-h1">Онлайн-кинотеатр bilook: фильмы в хорошем качестве всегда приносят настоящее удовольствие</h1>
                 <p>
                   Каждый день миллионы людей ищут фильмы онлайн, и никто не хочет усложнять себе жизнь – и вы наверняка один из них! А раз так, то bilook – это именно тот ресурс, который вам нужен. От
