--- a/src/online-card.html
+++ b/src/online-card.html
@@ -459,7 +459,7 @@
                 </div>
               </div>
               <div class="online-card__description-item">
-                <div class="text">
+                <div class="cinema-text">
                   <p>
                     В уединенный дом Уилла приходят на собеседование души нерожденных людей. Именно он выбирает, кто из них появится на свет. Трогательная философская драма о красоте и ценности жизни
                     – успешный полнометражный дебют режиссера Эдсона Ода, взявший приз за сценарий на кинофестивале «Сандэнс» и заслуживший теплые отзывы критиков (88% одобрения на Rotten Tomatoes). В
@@ -1081,7 +1081,7 @@
         <section class="cinema-seo-txt">
           <div class="online-cinema-wrapper">
             <div class="cinema-seo-txt__block">
-              <div class="text">
+              <div class="cinema-text">
                 <h1 class="title-h1">Онлайн-кинотеатр bilook: фильмы в хорошем качестве всегда приносят настоящее удовольствие</h1>
                 <p>
                   Каждый день миллионы людей ищут фильмы онлайн, и никто не хочет усложнять себе жизнь – и вы наверняка один из них! А раз так, то bilook – это именно тот ресурс, который вам нужен. От
@@ -1097,6 +1097,117 @@
                   laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
                   cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="online-review">
+          <div class="online-cinema-wrapper">
+            <div class="online-review__title"><span>Отзывы</span> <a href="#">Оставить отзыв</a></div>
+            <div class="online-review__block">
+              <div class="online-review__item">
+                <div class="online-review__info">
+                  <div class="online-review__user-pic">
+                    <img src="img/rev1.png" alt="" />
+                  </div>
+                  <div class="online-review__group">
+                    <div class="online-review__user-block">
+                      <span class="online-review__user-name">Инна Иванова</span>
+                      <span class="online-review__time">13 июля 2020</span>
+                    </div>
+                    <div class="online-review__review">
+                      Один из символов перестройки и вообще 80-90х годов! Наверное, моя любимая русская рок группа! Шикарные мелодии Бутусова, сюрреалистические тексты Кормильцева и на выходе получаем
+                      музыкальный оргазм)) до сих пор слушаю с удовольствием и ностальгией. Один из символов перестройки и вообще 80-90х годов! Наверное, моя любимая русская рок группа! Шикарные
+                      мелодии Бутусова, сюрреалистические тексты Кормильцева и на выходе получаем музыкальный оргазм)) до сих пор слушаю с удовольствием и ностальгией.
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="online-review__item">
+                <div class="online-review__info">
+                  <div class="online-review__user-pic">
+                    <img src="img/rev2.png" alt="" />
+                  </div>
+                  <div class="online-review__group">
+                    <div class="online-review__user-block">
+                      <span class="online-review__user-name">Инна Иванова</span>
+                      <span class="online-review__time">13 июля 2020</span>
+                    </div>
+                    <div class="online-review__review">
+                      Один из символов перестройки и вообще 80-90х годов! Наверное, моя любимая русская рок группа! Шикарные мелодии Бутусова, сюрреалистические тексты Кормильцева и на выходе получаем
+                      музыкальный оргазм)) до сих пор слушаю с удовольствием и ностальгией.
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="online-review__item">
+                <div class="online-review__info">
+                  <div class="online-review__user-pic">
+                    <img src="img/rev3.png" alt="" />
+                  </div>
+                  <div class="online-review__group">
+                    <div class="online-review__user-block">
+                      <span class="online-review__user-name">Инна Иванова</span>
+                      <span class="online-review__time">13 июля 2020</span>
+                    </div>
+                    <div class="online-review__review">
+                      Один из символов перестройки и вообще 80-90х годов! Наверное, моя любимая русская рок группа! Шикарные мелодии Бутусова, сюрреалистические тексты Кормильцева и на выходе получаем
+                      музыкальный оргазм)) до сих пор слушаю с удовольствием и ностальгией.
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="online-review__item">
+                <div class="online-review__info">
+                  <div class="online-review__user-pic">
+                    <img src="img/rev1.png" alt="" />
+                  </div>
+                  <div class="online-review__group">
+                    <div class="online-review__user-block">
+                      <span class="online-review__user-name">Инна Иванова</span>
+                      <span class="online-review__time">13 июля 2020</span>
+                    </div>
+                    <div class="online-review__review">
+                      Один из символов перестройки и вообще 80-90х годов! Наверное, моя любимая русская рок группа! Шикарные мелодии Бутусова, сюрреалистические тексты Кормильцева и на выходе получаем
+                      музыкальный оргазм)) до сих пор слушаю с удовольствием и ностальгией. Один из символов перестройки и вообще 80-90х годов! Наверное, моя любимая русская рок группа! Шикарные
+                      мелодии Бутусова, сюрреалистические тексты Кормильцева и на выходе получаем музыкальный оргазм)) до сих пор слушаю с удовольствием и ностальгией.
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="online-review__item">
+                <div class="online-review__info">
+                  <div class="online-review__user-pic">
+                    <img src="img/rev2.png" alt="" />
+                  </div>
+                  <div class="online-review__group">
+                    <div class="online-review__user-block">
+                      <span class="online-review__user-name">Инна Иванова</span>
+                      <span class="online-review__time">13 июля 2020</span>
+                    </div>
+                    <div class="online-review__review">
+                      Один из символов перестройки и вообще 80-90х годов! Наверное, моя любимая русская рок группа! Шикарные мелодии Бутусова, сюрреалистические тексты Кормильцева и на выходе получаем
+                      музыкальный оргазм)) до сих пор слушаю с удовольствием и ностальгией.
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="online-review__item">
+                <div class="online-review__info">
+                  <div class="online-review__user-pic">
+                    <img src="img/rev3.png" alt="" />
+                  </div>
+                  <div class="online-review__group">
+                    <div class="online-review__user-block">
+                      <span class="online-review__user-name">Инна Иванова</span>
+                      <span class="online-review__time">13 июля 2020</span>
+                    </div>
+                    <div class="online-review__review">
+                      Один из символов перестройки и вообще 80-90х годов! Наверное, моя любимая русская рок группа! Шикарные мелодии Бутусова, сюрреалистические тексты Кормильцева и на выходе получаем
+                      музыкальный оргазм)) до сих пор слушаю с удовольствием и ностальгией.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
