--- a/src/online.html
+++ b/src/online.html
@@ -33,96 +33,97 @@
             </div>
 
             <div class="page-header__group-mobile">
+              <div class="page-header__group-switch">
+                <label class="cinema-header__switch">
+                  <input type="checkbox" />
+                  <span class="cinema-header__slider cinema-header__round">
+                    <span class="sun">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                        <circle cx="7.99921" cy="7.99955" r="2.86112" stroke="url(#paint0_linear_56_11955)" stroke-width="0.5" />
+                        <path d="M7.9996 4.11112V1" stroke="url(#paint1_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
+                        <path d="M7.99963 14.9995V11.8884" stroke="url(#paint2_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
+                        <path d="M11.8885 8L14.9996 8" stroke="url(#paint3_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
+                        <path d="M1.00003 8L4.11115 8" stroke="url(#paint4_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
+                        <path d="M10.7489 10.7498L12.9488 12.9497" stroke="url(#paint5_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
+                        <path d="M3.04941 3.05035L5.2493 5.25024" stroke="url(#paint6_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
+                        <path d="M5.24912 10.7501L3.04922 12.95" stroke="url(#paint7_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
+                        <path d="M12.9491 3.0506L10.7492 5.25049" stroke="url(#paint8_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
+                        <defs>
+                          <linearGradient id="paint0_linear_56_11955" x1="7.99921" y1="4.88843" x2="7.99921" y2="11.1107" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#4E0792" />
+                            <stop offset="1" stop-color="#BC0D7E" />
+                          </linearGradient>
+                          <linearGradient id="paint1_linear_56_11955" x1="8.4996" y1="1" x2="8.4996" y2="4.11112" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#4E0792" />
+                            <stop offset="1" stop-color="#BC0D7E" />
+                          </linearGradient>
+                          <linearGradient id="paint2_linear_56_11955" x1="8.49963" y1="11.8884" x2="8.49963" y2="14.9995" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#4E0792" />
+                            <stop offset="1" stop-color="#BC0D7E" />
+                          </linearGradient>
+                          <linearGradient id="paint3_linear_56_11955" x1="14.9996" y1="8.5" x2="11.8885" y2="8.5" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#4E0792" />
+                            <stop offset="1" stop-color="#BC0D7E" />
+                          </linearGradient>
+                          <linearGradient id="paint4_linear_56_11955" x1="4.11114" y1="8.5" x2="1.00003" y2="8.5" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#4E0792" />
+                            <stop offset="1" stop-color="#BC0D7E" />
+                          </linearGradient>
+                          <linearGradient id="paint5_linear_56_11955" x1="12.5953" y1="13.3033" x2="10.3954" y2="11.1034" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#4E0792" />
+                            <stop offset="1" stop-color="#BC0D7E" />
+                          </linearGradient>
+                          <linearGradient id="paint6_linear_56_11955" x1="4.89574" y1="5.6038" x2="2.69585" y2="3.4039" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#4E0792" />
+                            <stop offset="1" stop-color="#BC0D7E" />
+                          </linearGradient>
+                          <linearGradient id="paint7_linear_56_11955" x1="2.69567" y1="12.5964" x2="4.89556" y2="10.3965" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#4E0792" />
+                            <stop offset="1" stop-color="#BC0D7E" />
+                          </linearGradient>
+                          <linearGradient id="paint8_linear_56_11955" x1="10.3957" y1="4.89693" x2="12.5955" y2="2.69704" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#4E0792" />
+                            <stop offset="1" stop-color="#BC0D7E" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+                    </span>
+                    <span class="circle"></span>
+                    <span class="line"></span>
+                    <span class="moon">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="13" height="16" viewBox="0 0 13 16" fill="none">
+                        <path
+                          d="M5.8336 3.50074C4.56432 3.70415 3.44333 4.41436 2.71724 5.47513C1.99114 6.5359 1.71942 7.86033 1.96184 9.15707C2.20426 10.4538 2.94098 11.6166 4.00991 12.3897C5.07884 13.1628 6.39244 13.4829 7.66172 13.2795C8.93099 13.076 10.052 12.3658 10.7781 11.3051C10.8088 11.2602 10.8387 11.2149 10.8677 11.1692C11.0636 10.8607 10.6752 10.5127 10.3274 10.6195C10.1646 10.6696 9.99747 10.7085 9.82693 10.7359C8.82964 10.8957 7.79753 10.6442 6.95766 10.0368C6.11778 9.42935 5.53893 8.51571 5.34846 7.49684C5.15798 6.47798 5.37148 5.43735 5.94198 4.60389C6.03955 4.46136 6.14618 4.32689 6.26092 4.20108C6.50615 3.9322 6.35734 3.43236 5.99479 3.47774C5.94099 3.48447 5.88726 3.49214 5.8336 3.50074Z"
+                          stroke="white"
+                          stroke-width="0.5"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                        />
+                        <path d="M8.66667 1.66667L8 2L8.66667 2.33333L9 3L9.33333 2.33333L10 2L9.33333 1.66667L9 1L8.66667 1.66667Z" stroke="white" stroke-width="0.5" />
+                        <path d="M10.6667 4.66667L10 5L10.6667 5.33333L11 6L11.3333 5.33333L12 5L11.3333 4.66667L11 4L10.6667 4.66667Z" stroke="white" stroke-width="0.5" />
+                      </svg>
+                    </span>
+                  </span>
+                </label>
+              </div>
               <!-- <a class="link-menu" href="mailto:info@bilook.ru">
-                <svg>
-                  <use xlink:href="/img/sprite.svg#icon-email"></use>
-                </svg>
-              </a>
-              <a class="link-menu" href="mailto:info@bilook.ru">
-                <svg>
-                  <use xlink:href="/img/sprite.svg#icon-email"></use>
-                </svg>
-              </a> -->
+                    <svg>
+                      <use xlink:href="/img/sprite.svg#icon-email"></use>
+                    </svg>
+                  </a>
+                  <a class="link-menu" href="mailto:info@bilook.ru">
+                    <svg>
+                      <use xlink:href="/img/sprite.svg#icon-email"></use>
+                    </svg>
+                  </a> -->
               <a class="link-menu trigger-modal" href="/cabinet/" data-modal="auth">
                 <svg>
                   <use xlink:href="/img/sprite.svg#icon-avatar"></use>
                 </svg>
               </a>
             </div>
-            <div class="page-header__group-switch">
-              <label class="cinema-header__switch">
-                <input type="checkbox" />
-                <span class="cinema-header__slider cinema-header__round">
-                  <span class="sun">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                      <circle cx="7.99921" cy="7.99955" r="2.86112" stroke="url(#paint0_linear_56_11955)" stroke-width="0.5" />
-                      <path d="M7.9996 4.11112V1" stroke="url(#paint1_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
-                      <path d="M7.99963 14.9995V11.8884" stroke="url(#paint2_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
-                      <path d="M11.8885 8L14.9996 8" stroke="url(#paint3_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
-                      <path d="M1.00003 8L4.11115 8" stroke="url(#paint4_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
-                      <path d="M10.7489 10.7498L12.9488 12.9497" stroke="url(#paint5_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
-                      <path d="M3.04941 3.05035L5.2493 5.25024" stroke="url(#paint6_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
-                      <path d="M5.24912 10.7501L3.04922 12.95" stroke="url(#paint7_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
-                      <path d="M12.9491 3.0506L10.7492 5.25049" stroke="url(#paint8_linear_56_11955)" stroke-width="0.5" stroke-linecap="round" />
-                      <defs>
-                        <linearGradient id="paint0_linear_56_11955" x1="7.99921" y1="4.88843" x2="7.99921" y2="11.1107" gradientUnits="userSpaceOnUse">
-                          <stop stop-color="#4E0792" />
-                          <stop offset="1" stop-color="#BC0D7E" />
-                        </linearGradient>
-                        <linearGradient id="paint1_linear_56_11955" x1="8.4996" y1="1" x2="8.4996" y2="4.11112" gradientUnits="userSpaceOnUse">
-                          <stop stop-color="#4E0792" />
-                          <stop offset="1" stop-color="#BC0D7E" />
-                        </linearGradient>
-                        <linearGradient id="paint2_linear_56_11955" x1="8.49963" y1="11.8884" x2="8.49963" y2="14.9995" gradientUnits="userSpaceOnUse">
-                          <stop stop-color="#4E0792" />
-                          <stop offset="1" stop-color="#BC0D7E" />
-                        </linearGradient>
-                        <linearGradient id="paint3_linear_56_11955" x1="14.9996" y1="8.5" x2="11.8885" y2="8.5" gradientUnits="userSpaceOnUse">
-                          <stop stop-color="#4E0792" />
-                          <stop offset="1" stop-color="#BC0D7E" />
-                        </linearGradient>
-                        <linearGradient id="paint4_linear_56_11955" x1="4.11114" y1="8.5" x2="1.00003" y2="8.5" gradientUnits="userSpaceOnUse">
-                          <stop stop-color="#4E0792" />
-                          <stop offset="1" stop-color="#BC0D7E" />
-                        </linearGradient>
-                        <linearGradient id="paint5_linear_56_11955" x1="12.5953" y1="13.3033" x2="10.3954" y2="11.1034" gradientUnits="userSpaceOnUse">
-                          <stop stop-color="#4E0792" />
-                          <stop offset="1" stop-color="#BC0D7E" />
-                        </linearGradient>
-                        <linearGradient id="paint6_linear_56_11955" x1="4.89574" y1="5.6038" x2="2.69585" y2="3.4039" gradientUnits="userSpaceOnUse">
-                          <stop stop-color="#4E0792" />
-                          <stop offset="1" stop-color="#BC0D7E" />
-                        </linearGradient>
-                        <linearGradient id="paint7_linear_56_11955" x1="2.69567" y1="12.5964" x2="4.89556" y2="10.3965" gradientUnits="userSpaceOnUse">
-                          <stop stop-color="#4E0792" />
-                          <stop offset="1" stop-color="#BC0D7E" />
-                        </linearGradient>
-                        <linearGradient id="paint8_linear_56_11955" x1="10.3957" y1="4.89693" x2="12.5955" y2="2.69704" gradientUnits="userSpaceOnUse">
-                          <stop stop-color="#4E0792" />
-                          <stop offset="1" stop-color="#BC0D7E" />
-                        </linearGradient>
-                      </defs>
-                    </svg>
-                  </span>
-                  <span class="circle"></span>
-                  <span class="line"></span>
-                  <span class="moon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="13" height="16" viewBox="0 0 13 16" fill="none">
-                      <path
-                        d="M5.8336 3.50074C4.56432 3.70415 3.44333 4.41436 2.71724 5.47513C1.99114 6.5359 1.71942 7.86033 1.96184 9.15707C2.20426 10.4538 2.94098 11.6166 4.00991 12.3897C5.07884 13.1628 6.39244 13.4829 7.66172 13.2795C8.93099 13.076 10.052 12.3658 10.7781 11.3051C10.8088 11.2602 10.8387 11.2149 10.8677 11.1692C11.0636 10.8607 10.6752 10.5127 10.3274 10.6195C10.1646 10.6696 9.99747 10.7085 9.82693 10.7359C8.82964 10.8957 7.79753 10.6442 6.95766 10.0368C6.11778 9.42935 5.53893 8.51571 5.34846 7.49684C5.15798 6.47798 5.37148 5.43735 5.94198 4.60389C6.03955 4.46136 6.14618 4.32689 6.26092 4.20108C6.50615 3.9322 6.35734 3.43236 5.99479 3.47774C5.94099 3.48447 5.88726 3.49214 5.8336 3.50074Z"
-                        stroke="white"
-                        stroke-width="0.5"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      />
-                      <path d="M8.66667 1.66667L8 2L8.66667 2.33333L9 3L9.33333 2.33333L10 2L9.33333 1.66667L9 1L8.66667 1.66667Z" stroke="white" stroke-width="0.5" />
-                      <path d="M10.6667 4.66667L10 5L10.6667 5.33333L11 6L11.3333 5.33333L12 5L11.3333 4.66667L11 4L10.6667 4.66667Z" stroke="white" stroke-width="0.5" />
-                    </svg>
-                  </span>
-                </span>
-              </label>
-            </div>
           </div>
+
           <div class="page-header__item">
             <nav class="header__menu">
               <ul class="header__menu-list">
@@ -362,7 +363,7 @@
           </div>
         </section>
 
-        <section class="online-cinema js-slider-cinema">
+        <section class="online-cinema cinema-recomendation js-slider-cinema">
           <div class="online-cinema-wrapper">
             <div class="online-cinema__block">
               <div class="online-cinema__title-block">
